implementacion auditoria, reportes y mejoras frontend