@@ -2,6 +2,9 @@ package com.herman.springcloud.msvc.orders_services.msvc_orders_services.orders.
 
 import com.herman.springcloud.msvc.orders_services.msvc_orders_services.orders.application.ports.DomainEventPublisher;
 import com.herman.springcloud.msvc.orders_services.msvc_orders_services.orders.domain.events.DomainEvent;
+import com.herman.springcloud.msvc.orders_services.msvc_orders_services.orders.domain.events.OrderCreatedEvent;
+import com.herman.springcloud.msvc.orders_services.msvc_orders_services.orders.domain.events.OrderPaidEvent;
+import com.herman.springcloud.msvc.orders_services.msvc_orders_services.orders.domain.events.OrderStatusChangedEvent;
 import com.herman.springcloud.msvc.orders_services.msvc_orders_services.orders.infrastructure.events.JpaEventLogEntity;
 import com.herman.springcloud.msvc.orders_services.msvc_orders_services.orders.infrastructure.events.SpringDataEventLogRepository;
 import org.springframework.amqp.core.TopicExchange;
@@ -12,6 +15,7 @@ import java.util.UUID;
 
 @Component
 public class RabbitMqDomainEventPublisher implements DomainEventPublisher {
+
     private final RabbitTemplate rabbitTemplate;
     private final TopicExchange exchange;
     private final SpringDataEventLogRepository eventLogRepository;
@@ -41,14 +45,45 @@ public class RabbitMqDomainEventPublisher implements DomainEventPublisher {
     }
 
     private String toJson(DomainEvent event) {
-        return """
-                {"event_type":"%s","aggregate_id":"%s","timestamp":"%s","data":"%s"}
-                """.formatted(
-                escape(event.eventType()),
-                event.aggregateId(),
-                event.occurredAt(),
-                escape(event.toString())
-        ).trim();
+        String dataJson;
+        if (event instanceof OrderCreatedEvent e) {
+            dataJson = String.format(
+                "{\"aggregateId\":\"%s\",\"restaurantId\":\"%s\",\"clientId\":%s,\"orderCode\":\"%s\",\"totalAmount\":%s,\"occurredAt\":\"%s\",\"eventType\":\"OrderCreated\"}",
+                e.aggregateId(),
+                e.restaurantId(),
+                e.clientId() != null ? "\"" + e.clientId() + "\"" : "null",
+                e.orderCode(),
+                e.totalAmount(),
+                e.occurredAt()
+            );
+        } else if (event instanceof OrderStatusChangedEvent e) {
+            dataJson = String.format(
+                "{\"aggregateId\":\"%s\",\"restaurantId\":\"%s\",\"orderCode\":\"%s\",\"previousStatus\":\"%s\",\"newStatus\":\"%s\",\"occurredAt\":\"%s\",\"eventType\":\"OrderStatusChanged\"}",
+                e.aggregateId(),
+                e.restaurantId(),
+                e.orderCode(),
+                e.previousStatus(),
+                e.newStatus(),
+                e.occurredAt()
+            );
+        } else if (event instanceof OrderPaidEvent e) {
+            dataJson = String.format(
+                "{\"aggregateId\":\"%s\",\"restaurantId\":\"%s\",\"occurredAt\":\"%s\",\"eventType\":\"OrderPaid\"}",
+                e.aggregateId(),
+                e.restaurantId(),
+                e.occurredAt()
+            );
+        } else {
+            dataJson = "\"" + escape(event.toString()) + "\"";
+        }
+
+        return String.format(
+            "{\"event_type\":\"%s\",\"aggregate_id\":\"%s\",\"timestamp\":\"%s\",\"data\":%s}",
+            event.eventType(),
+            event.aggregateId(),
+            event.occurredAt(),
+            dataJson
+        );
     }
 
     private String escape(String value) {
